--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
 	--light-accent: #BC6FF1;
 
 	--button-hightlight: #9832db;
+	--light-transparent: rgba(255, 255, 255, 0.3);
 
 	--mainFont: 'Poppins', sans-serif;
 }
@@ -33,6 +34,7 @@ body {
 	font-family: var(--mainFont);
 	font-size: 1.6rem;
 	line-height: 1.8;
+	overflow-x: hidden;
 }
 
 h1, h2, h3 {
@@ -89,6 +91,16 @@ img {
 	color: var(--main-accent);
 }
 
+.visualmente-oculto:not(:focus):not(:active) {
+  clip: rect(0 0 0 0); 
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap; 
+  width: 1px;
+}
+
 /*
 
 ]=======( Header )=======[
@@ -123,6 +135,10 @@ img {
 
 .logo:hover {
 	color: var(--light-accent);
+}
+
+.mobile-nav-toggle {
+	display: none;
 }
 
 .navigation__list {
@@ -163,6 +179,53 @@ img {
 	background-color: var(--button-hightlight);
 	box-shadow: none;
 	scale: 1.05;
+}
+
+@media (max-width: 768px) {
+    .navigation {
+    	position: fixed;
+    	inset: 0 0 0 20%;
+    	background-color: var(--darker-black);
+    	padding: min(30vh, 6rem) 0 ;
+    	z-index: 10;
+    	transform: translateX(100%);
+    	transition: .2s ease-in-out;
+    	transition-property: box-shadow, transform;
+    }
+
+    .navigation[data-visible="true"] {
+    	box-shadow: 0 0 10rem var(--black);
+    	transform: translateX(0);
+    }
+
+	.navigation__list {
+		flex-direction: column;
+		align-items: flex-start;
+		gap: 1rem;
+		height: 100%;
+	}
+
+	.mobile-nav-toggle {
+		display: block;
+		position: absolute;
+		background: red;
+		width: 3.5rem;
+		aspect-ratio: 1;
+		top: 2rem;
+		right: 2rem;
+		z-index: 99;
+		background: url('../imgs/svg/bars-solid.svg');
+		background-size: contain;
+		background-repeat: no-repeat;
+		border: none;
+	}
+
+	.mobile-nav-toggle[aria-expanded="true"] {
+		background: url('../imgs/svg/xmark-solid.svg');
+		background-size: contain;
+		background-repeat: no-repeat;
+	}
+
 }
 
 /*
@@ -268,7 +331,7 @@ img {
 }
 
 .botones_main__boton:hover {
-	background-color: rgba(255, 255, 255, 0.2);
+	background-color: var(--light-transparent);
 	border-radius: .5rem;
 	scale: 1.05;
 }
@@ -370,10 +433,10 @@ img {
 	background-position: center bottom;
 	background-repeat: no-repeat;
 	padding-inline: 3rem;
-	height: 120vh;
+	height: 100vh;
 }
 
-@media (max-height: 1000px) {
+@media (max-height: 900px) {
     .educacion {
     	height: 160vh;
     }
@@ -408,19 +471,6 @@ img {
 	gap: 2rem;
 }
 
-.timeline__row {
-	grid-column: 1/2;
-	grid-row: span 2;
-}
-
-.timeline__row:nth-of-type(odd) {
-	grid-column: 3/4;
-}
-
-.timeline__row:nth-of-type(3) {
-	grid-row: 2 / span 2;
-}
-
 .center-line {
 	grid-column: 2/3;
 	grid-row: 1/ -1;
@@ -428,6 +478,7 @@ img {
 	width: 1rem;
 	margin-inline: auto;
 }
+
 
 @media (max-width: 768px) {
     .timeline {
@@ -440,24 +491,20 @@ img {
 
 	.timeline__row {
 		grid-column: 2/3;
-		grid-row: unset;
 	}
 
-    .timeline__row:nth-of-type(odd) {
-		grid-column: 2/3;
+	.timeline__space {
+		display: none;
 	}
-
-	.timeline__row:nth-of-type(3) {
-		grid-row: unset;
-	}
-
 }
 
 @media (max-width: 440px) {
     .timeline {
-    	grid-template-columns: 1fr;
+    	display: flex;
+    	flex-direction: column;
+    	justify-content: space-between;
     	width: 100%;
-    	gap: 2rem 0;
+    	gap: 4rem;
     }
 
     .center-line {
@@ -535,5 +582,3 @@ img {
 .card__titulo {
 	margin: 1rem 0 0 0;
 }
-
-.card__
