Deployment for mobile testing

--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,7 @@ img {
 
 .main {
 	min-height: 100vh;
-	min-height: 100svh;
+	min-height: 100dvh;
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-around;
