--- a/css/styles.css
+++ b/css/styles.css
@@ -238,7 +238,6 @@ img {
 
 .main {
 	min-height: 100vh;
-	min-height: 100dvh;
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-around;
@@ -369,7 +368,7 @@ img {
 
 .custom-shape-divider-bottom-1688545229 {
     position: absolute;
-    bottom: -1px;
+    top: calc(100vh - 81px);
     left: 0;
     width: 100%;
     overflow: hidden;
@@ -384,7 +383,7 @@ img {
 }
 
 .custom-shape-divider-bottom-1688545229 .shape-fill {
-    fill: #FFFFFF;
+    fill: #FFF;
 }
 
 /*
